[package]
name = "clb-near-node-app"
version = "0.3.1"
authors = ["Felix Kuestahler <felix@cloudburo.net>"]
description = "A NPM package which provides Rust-based Web-Assembly Features"
repository = "https://github.com/talfco/clb-near-node-app"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"